--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 *:focus {
   outline: 1px;
   outline-color: transparent;
-  border-radius: 2rem;
   box-shadow: 0 0 0 2px rgba(0, 123, 255, .5) !important;
 }
 *{
